--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,25 @@ maven_group=org.lilbrocodes
 archives_base_name=elixiry
 
 fabric_version=0.92.6+1.20.1
-cca_version=5.2.3
+jade_version=11.12.3
+jei_version=15.20.0.112
 composer_version=0.45
+
+port_lib_version = 2.3.4+1.20.1
+port_lib_modules = \
+  accessors,\
+  base,\
+  blocks,\
+  core,\
+  data,\
+  extensions,\
+  lazy_registration,\
+  model_generators,\
+  models,\
+  networking,\
+  tool_actions
+lodestone_version = 1.6.2.3f
+cca_version = 5.2.3
+trinkets_version = 3.7.2
+rea_version = 2.4.0
+
