--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ fabric_version=0.92.6+1.20.1
 jade_version=11.12.3
 jei_version=15.20.0.112
 composer_version=0.45
+fzzy_version = 0.7.1
 
 port_lib_version = 2.3.4+1.20.1
 port_lib_modules = \
